fixed resume spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -120,10 +120,6 @@ table.navtable2 td{
 	max-width: 1200px;
 }
 
-.pdf_holder{
-	max-width: 1200px;
-}
-
 .cursor{
 	float:left;
 }
